Update dependencies. Use warp-reader-core